2008-10-08  Christian Dywan  <christian@imendio.com>

	Bug 555387 – Changing the sensitivity of a statusbar
	mistakenly requires a display

	* gtk/gtkstatusbar.c (set_grip_cursor): Only change the cursor
        of the resize grip if there is a grip window.

2008-10-06  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktooltip.c (gtk_tooltip_show_tooltip): Avoid unitialized
	memory warnings from valgrind.

2008-10-07 11:03:30  Tim Janik  <timj@imendio.com>

	* gtk/gtkbox.h: keep GtkBox as an abstract type and keep _gtk_box_new()
	as private function until we settle on the exact semantics.
	renamed _gtk_box_set_old_defaults() as suggested by Mitch.

2008-10-07  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkbox.c: reindent static prototypes.

2008-10-07  Michael Natterer  <mitch@imendio.com>

	Bug 553573 – Add orientation API to GtkBox

	* gtk/gtkbox.[hh]: implement the GtkOrientable interface and
	swallow all code from GtkHBox and GtkVBox. Add gtk_box_new()
	which takes a GtkOrientation argument. Also move the newly
	added "spacing_set" boolean from struct GtkBox to the new
	private struct.

	* gtk/gtkhbox.[ch]
	* gtk/gtkvbox.[ch]: remove all code except the constructor and
	call gtk_orientable_set_orientation() in init().

	* gtk/gtk.symbols: add gtk_box_new().

2008-10-06  Björn Lindqvist  <bjourne@gmail.com>

	Bug 539464 – gtk_cell_view_get_model is missing in GtkCellView

	* gtk/gtkcellview.c (gtk_cell_view_get_model): Add
	gtk_cell_view_get_model.

2008-10-06  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkprintunixdialog.c (create_main_page): Show the tooltip
	on the range entry itself, too.

2008-10-04  Tor Lillqvist  <tml@novell.com>

	Bug 132501 - Make utility window translate to tool window in win32

	Implement the utility window type hint. Such windows are kept on
	top of other windows of the same process. Makes GIMP's toolbox and
	dock windows behave more like in GNOME under metacity. Apply the